設定の文字を表示させた

--- a/tsunagaru-kun/UI/Devicelist/Devicelist.storyboard
+++ b/tsunagaru-kun/UI/Devicelist/Devicelist.storyboard
@@ -178,6 +178,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="EgU-6U-kL2"/>
+        <segue reference="VgA-cc-Xjw"/>
     </inferredMetricsTieBreakers>
 </document>
